--- a/index.html
+++ b/index.html
@@ -1,18 +1,102 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Devesh's PersonalSite</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Comforter+Brush&family=Dancing+Script:wght@1000&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="favicon.ico">
 </head>
+
 <body>
-    <h1 class = "heading">Calculator</h1>
-    <form action = "/" method="post">
-        <input type="text" name="num1" placeholder="number 1">
-        <input type="text" name="num2" placeholder="number 2">
-        <button type="submit" name="submit">Calculate</button>
-    </form>
-   
+    <div class="top-container">
+        <img class="clouds top-cloud" src="images/cloud.jfif" alt="">
+        <h1>I'm Devesh </h1>
+        <h3>A Full Stack Developer | Competitive Programmer</h3>
+        <img class="clouds bottom-cloud" src="images/cloud.jfif" alt="">
+        <img src="images/hill.png" alt="" style="background-color: hotpink;">
+    </div>
+    <hr>
+
+    <div class="middle-container">
+        <td><img style="border-radius: 100%;" src="images/dev.jfif" alt="an alternative image"></td>
+        <h2>Hello</h2>
+        <p>I am Full stack developer and competitive coder.I love solving problems <br></p>
+        <hr>
+        <div class="education">
+            <h2>Education</h2>
+            <p>B.Tech, Computer Science & Engineering <br>
+                Bundelkhand Institute of Engineering and Technology :-<strong>2019-2023</strong> <br>
+                Senior Secondary (XII), Science <br>
+                Dr Virendra Swarup Education Centre:-<strong>2017-2018</strong> <br>
+                Secondary (X) <br>
+                Dr Virendra Swarup Education Centre:-<strong>2016-2017</strong><br>
+            </p>
+        </div>
+        <hr>
+        <div class="training">
+            <h2>Tranings</h2>
+            <strong>React</strong> <br>
+            <a href="https://internshala.com/">Internshala Trainings</a>, Online <br>
+            <strong><em>Apr 2021 - May 2021</em></strong>
+            <p class="text-less">
+                Successfully completed a six weeks online certied training on React. The training
+                consisted of Introduction, Tic Tac Toe Game, Box Oce App, Chat Application,
+                Custom Backend.</p>
+            <strong>Django</strong> <br>
+            <a href="https://www.findredd.in/">Findredd</a>, Online <br>
+            <strong><em>Oct 2020 - Nov 2020</em></strong> <br>
+            <strong> Python</strong> <br>
+            <a href="https://ict.iitk.ac.in/">E & ICT Academy</a>, Online <br>
+            <strong><em>Jun 2020 - Aug 2020</em></strong> <br>
+
+        </div>
+
+        <hr>
+        <div class="skill">
+            <a href="skills.html">
+                <h2> My Skills</h2>
+            </a>
+            <div class="skill-row">
+                <img class="design" src="images/design.webp" alt="">
+                <h3>Design and Development</h3>
+                <p>I started learning to code when I was 14 years old because I wanteed to create my own
+                    games.overtime,I gained
+                    a wealth of experience designing and developing web and mobile appplications. </p>
+            </div>
+            <div class="skill-row">
+                <img class="code" src="images/coding.webp" alt="">
+                <h3> Competitive Coding</h3>
+                <p>I stated my competitive coding journey after my Secondary education.I love Problem Solving and
+                    discovering new
+                    ways to solve the problem
+                </p>
+            </div>
+        </div>
+        <hr>
+        <h2>Get In Touch</h2>
+        <h3 class="text-less">If you love website as much as I do.</h3><br>
+        <a class="btn" href="contact-me.html"><strong>Contact Me</strong></a>
+    </div>
+
+    <div class="bottom-container">
+        <a href="https://www.linkedin.com/in/devesh-bhushan-284b381aa/">Linkdin</a>
+        <a href="https://github.com/devesh-bhushan">Github</a>
+        <P class="copyright">©️ 2018 Devesh Bhushan @ The App </P>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
